java분석오류해결(2025-10-14 12:08)

--- a/docs/java분석오류해결(251013).md
+++ b/docs/java분석오류해결(251013).md
@@ -35,3 +35,99 @@
   니다.
 
   › 파서 교체/업그레이드 방향으로 진행해줘
+
+─ Worked for 14m 09s ───────────────────────────────────────────────────────────────────────────────────────────────────
+
+• 기존 javalang이 Java 15+ 문법(텍스트 블록, switch 표현식)을 인식하지 못하면서 파싱이 중단됐습니다. 이를 해결하기 위해
+  라이브러리를 벤더링하고 해당 문법을 직접 지원하도록 확장했습니다.
+
+  - csa/vendor/javalang/tokenizer.py:45·:208·:245에 텍스트 블록 토큰화를 추가하고 yield 키워드를 인식하도록 수정했습
+    니다.
+  - csa/vendor/javalang/parser.py:90·:1663·:1694·:2007에서 switch 표현식 전용 파서를 구현하고, case 라벨 파싱 시 람다 처
+    리와 충돌하지 않도록 컨텍스트 플래그를 도입했습니다.
+  - csa/vendor/javalang/tree.py:216에 SwitchExpression/SwitchExpressionCase 노드를 추가해 새 구문을 표현할 수 있게 했습
+    니다.
+  - 파서 사용처(csa/services/java_analysis/project.py:10, csa/services/java_analysis/utils.py:11, csa/parsers/java/
+    logical_name.py:12)를 벤더 버전으로 전환했습니다.
+
+  확인
+
+  - 벤더링한 파서로 문제 제기된 여섯 개 파일을 직접 파싱해 모두 정상 동작함을 확인했습니다.
+
+  다음 단계 제안
+
+  1. .venv에서 python -m csa.cli.main analyze --all-objects --clean --project-name <프로젝트>를 재실행해 전체 분석을 갱
+     신하세요.
+  2. 기존 파이프라인이 새 AST 구조(SwitchExpressionCase)와 잘 연동되는지 주요 기능을 한 번 씩 검증해보시면 좋겠습니다.
+
+  추가 이슈가 보이면 말씀 주세요.
+===================================
+  › 그런데 왜 tree-sitter-java를 적용하지 않았는지?
+  벤더링한 파서를의 의미를 조금 더 상세히 설명해줘
+
+
+• tree-sitter-java를 바로 적용하지 않은 이유는 다음과 같습니다. 현재 이 프로젝트 환경에서는 PyPI에
+  tree_sitter_languages(tree-sitter의 언어 바인딩 번들) 패키지가 올라와 있지 않아 pip로 간단히 설치할 수 없었습니다. 그
+  렇다고 해서 즉시 Git 서브모듈을 추가하거나 직접 빌드해 연동하려면 빌드 스크립트와 배포 파이프라인을 모두 손봐야 하므로
+  작업 범위가 상당히 커집니다. 또한 기존 분석 파이프라인이 javalang의 AST 구조에 맞춰 촘촘히 짜여 있어 tree-sitter로 갈
+  아타려면 AST 매핑과 후처리 로직을 전면 수정해야 합니다. 이 모든 변경을 한 번에 진행하면 위험이 커서, 먼저 현재 구조를
+  크게 깨지 않는 선에서 문제를 해결하는 쪽을 택했습니다.
+
+  “벤더링한 파서”라는 것은 외부에서 배포되는 라이브러리를 그대로 의존하지 않고, 우리 저장소 안에 사본을 들여와서 직접 관
+  리한다는 뜻입니다. 이번에는 .venv/Lib/site-packages/javalang 내용을 csa/vendor/javalang으로 복사한 뒤, 그곳에서 Java
+  15 이후 기능(텍스트 블록, switch 표현식)을 처리할 수 있도록 토크나이저와 파서를 보강했습니다. 이후 코드에서는 import
+  javalang 대신 from csa.vendor import javalang처럼 벤더링한 버전을 사용하게 바꿨습니다. 이렇게 하면 새 기능을 안정적으
+  로 지원하면서도 기존 javalang AST를 쓰는 분석 로직을 그대로 유지할 수 있습니다.
+
+  즉, 이번 수정은 tree-sitter 기반으로 완전히 교체하기 전 단계의 “임시 확장 버전”입니다. 장기적으로 tree-sitter 같은 최
+  신 파서로 전환할 계획이 있다면, 벤더링된 코드를 참고하면서 천천히 마이그레이션 로드맵을 잡는 것이 좋겠습니다.
+
+=====================
+› EmailService.java 의 method 분석 결과를 Neo4J 조회한 결과인데..
+  소스 코드와 일치하지 않은 것 같아. 확인해줘
+  ============= Cypher query ================
+  MATCH (c:Class {name: 'EmailService'})-[:HAS_METHOD]->(m:Method)
+    RETURN
+        m.name        AS method_name,
+        m.logical_name AS logical_name,
+        m.return_type  AS return_type,
+        m.project_name AS project_name
+    ORDER BY m.name;
+  ============= 조회 결과 ===========
+  method_name,logical_name,return_type,project_name
+  getErrorMessage,null,null,null
+  isSuccess,null,null,null
+  sendEmailToUser,null,null,null
+  sendHtmlEmail,null,null,null
+  sendReservationConfirmationEmail,null,null,null
+  sendSimpleEmail,null,null,null
+
+  ─ Worked for 50s ───────────────────────────────────────────────────────────────────────────────────────────────────────
+
+• EmailService 클래스의 메서드가 Neo4j에서 6개만 보이고 sendEmailToUser만 남아 있는 문제는, 이전 분석에서 Java 텍
+  스트 블록 때문에 파서가 중간에 실패해 DB에 불완전한 결과가 저장된 상태이기 때문입니다. 당시엔 sendSimpleEmail,
+  sendHtmlEmail 정도만 부분적으로 수집됐고 EmailResult 내부의 빌더/getter가 섞여 들어가면서 getErrorMessage, isSuccess
+  같은 메서드 이름만 남았습니다. 이번에 파서를 벤더링해서 텍스트 블록과 switch 표현식을 지원하도록 확장한 뒤 실제로
+  parse_single_java_file를 실행해 본 결과, 아래처럼 소스에 있는 12개 메서드(생성자 포함)가 모두 추출되는 것을 확인했습
+  니다.
+
+  sendSimpleEmail
+  sendSimpleEmail
+  sendHtmlEmail
+  sendHtmlEmail
+  sendEmailToUser
+  sendReservationConfirmationEmail
+  sendQuoteReadyEmail
+  sendServiceCompletedEmail
+  createReservationConfirmationHtml
+  createQuoteReadyHtml
+  createServiceCompletedHtml
+  getUserEmail
+  EmailService (constructor)
+
+  따라서 Neo4j 내용을 최신 파서 결과로 갱신하려면 .venv를 활성화한 뒤 아래 명령으로 분석을 다시 수행해 주세요.
+
+  python -m csa.cli.main analyze --all-objects --clean --project-name <프로젝트명>
+
+  --clean 옵션을 주면 이전에 남아 있던 불완전한 노드가 정리된 뒤 재생성되므로, 재실행 후 EmailService 클래스에서 위 메서
+  드들이 모두 정상적으로 확인될 것입니다.
