java 분석오류해결업데이트(2025-10-14 00:15)

--- a/docs/java분석오류해결(251013).md
+++ b/docs/java분석오류해결(251013).md
@@ -131,3 +131,37 @@
 
   --clean 옵션을 주면 이전에 남아 있던 불완전한 노드가 정리된 뒤 재생성되므로, 재실행 후 EmailService 클래스에서 위 메서
   드들이 모두 정상적으로 확인될 것입니다.
+
+
+===========
+› 여전히 동일한 결과가 나오고 있음.
+  return type도 null이고 project_name도 null 이야... => 확인해줘
+  ==========================================
+  method_name,logical_name,return_type,project_name
+  getErrorMessage,null,null,null
+  isSuccess,null,null,null
+  sendEmailToUser,null,null,null
+  sendHtmlEmail,null,null,null
+  sendReservationConfirmationEmail,null,null,null
+  sendSimpleEmail,null,null,null
+  
+  ─ Worked for 1m 33s ────────────────────────────────────────────────────────────────────────────────────────────────────
+
+• 이번에도 EmailService 클래스가 분석되지 않아 이전 결과(6개의 메서드, 속성 미반영)가 계속 남아 있었던 이유는, csa/
+  services/java_analysis/project.py:374 인근에서 <html, <body, <div 등이 포함된 .java 파일을 “HTML이 섞인 파일”로 간주해
+  통째로 건너뛰도록 되어 있었기 때문입니다. EmailService.java는 텍스트 블록 안에 HTML 템플릿을 가지고 있어서 분석 루프에
+  서 제외됐고, 결국 Neo4j에는 예전 데이터만 남았습니다.
+
+  이제 해당 필터를 제거했습니다. 두 번 등장하던 체크(클래스 개수 세기 단계와 본 분석 단계)를 모두 삭제했으니, 텍스트 블
+  록을 포함한 Java 파일도 그대로 파싱됩니다. 최신 파서가 텍스트 블록을 처리하도록 이미 확장되어 있으니 부작용은 없습
+  니다.
+
+  - 수정 파일: csa/services/java_analysis/project.py:370·:402
+  - 작업 내용: <html/<body/<div 검사로 인한 파일 스킵 로직 제거
+
+  적용 후 .venv 환경을 활성화하고 아래 명령처럼 --clean 옵션을 포함해 분석을 다시 실행해 주세요.
+
+  python -m csa.cli.main analyze --all-objects --clean --project-name <프로젝트명>
+
+  재분석이 완료되면 Neo4j에서 EmailService 메서드 노드가 원본 소스와 동일한 목록(리턴 타입, 프로젝트명 포함)으로 갱신될
+  것입니다. 추가로 확인하고 싶은 항목이 있으면 알려주세요.
