java object 분석 방법 검토결과(2025-10-17 18:25)
Co-authored-by: Ona <no-reply@ona.com>

--- a/docs/java-object분석프로세스(2025-10-17_1800).md
+++ b/docs/java-object분석프로세스(2025-10-17_1800).md
@@ -527,3 +527,417 @@ Neo4j 그래프 데이터베이스
 ---
 
 이 전체 프로세스를 통해 Java 프로젝트의 모든 구조와 관계가 Neo4j 그래프 데이터베이스에 저장되어, 시퀀스 다이어그램 생성, CRUD 매트릭스 분석, 호출 체인 분석 등에 활용됩니다.
+
+---
+> java파일을 분석해서 분석 대상 전체를 메모리에 저장한 후 DB 저장할 때는 다시 메모리에서 노드 단위로 읽어서 DB에 저장하는 구조인가? 
+
+● 정확한 질문입니다. 코드를 확인해서 설명드리겠습니다.
+
+● Read(csa/services/java_analysis/project.py)
+  ⎿  Read 50 lines
+
+● 네, 정확합니다! 현재 구조를 분석해드리겠습니다.
+
+● Read(csa/services/analysis/neo4j_writer.py)
+  ⎿  Read 30 lines
+
+● 네, 정확히 맞습니다! 코드 구조를 확인해드리겠습니다.
+
+  현재 메모리 처리 구조
+
+  1단계: 전체 파싱 → 메모리 저장
+
+  파일: csa/services/java_analysis/project.py:336-750
+
+  def parse_java_project_full(directory: str, ...):
+      packages = {}          # 메모리에 딕셔너리 생성
+      classes = {}           # 메모리에 딕셔너리 생성
+
+      # 모든 Java 파일 순회
+      for root, _, files in os.walk(directory):
+          for file in files:
+              if file.endswith(".java"):
+                  # 파일 읽기
+                  with open(file_path, 'r', encoding='utf-8') as f:
+                      file_content = f.read()
+
+                  # AST 파싱
+                  tree = javalang.parse.parse(file_content)
+
+                  # Package 객체 메모리 저장
+                  packages[package_name] = Package(...)
+
+                  # Class 객체 메모리 저장
+                  classes[class_key] = Class(
+                      name=class_name,
+                      source=file_content,  # 소스 코드 전체 저장!
+                      methods=[...],
+                      properties=[...],
+                      ...
+                  )
+
+      # 메모리에서 추가 분석
+      classes_list = list(classes.values())
+      beans = extract_beans_from_classes(classes_list)
+      endpoints = extract_endpoints_from_classes(classes_list)
+      ...
+
+      # 모든 것을 튜플로 반환 (전부 메모리에 있음)
+      return (
+          list(packages.values()),
+          classes_list,
+          beans,
+          endpoints,
+          ...
+      )
+
+  2단계: 메모리에서 읽어서 → DB에 하나씩 저장
+
+  파일: csa/services/analysis/neo4j_writer.py:304-381
+
+  def save_java_objects_to_neo4j(
+      db: Optional[GraphDB],
+      artifacts: JavaAnalysisArtifacts,  # 메모리의 전체 데이터
+      ...
+  ):
+      # 1. Packages 저장
+      _add_packages(db, artifacts.packages, project_name, logger)
+
+      # 내부: for loop로 하나씩 DB 저장
+      def _add_packages(...):
+          for package in packages:
+              db.add_package(package, project_name)  # 개별 저장
+
+      # 2. Classes 저장
+      _add_classes(db, artifacts.classes, ...)
+
+      # 내부: for loop로 하나씩 DB 저장 (neo4j_writer.py:298-301)
+      for idx, class_obj in enumerate(classes, 1):
+          db.add_class(class_obj, package_name, project_name)  # 개별 저장
+
+      # 3. Spring Boot 객체 저장
+      add_springboot_objects(db, artifacts.beans, ...)
+
+      # 내부: for loop로 하나씩 DB 저장 (neo4j_writer.py:131-133)
+      for idx, bean in enumerate(beans, 1):
+          db.add_bean(bean, project_name)  # 개별 저장
+
+  ---
+  메모리 사용량 분석
+
+  대용량 프로젝트 예시 (150개 Java 파일, 클래스 1,200개)
+
+  | 항목                               | 메모리 사용량 (추정) |
+  |----------------------------------|--------------|
+  | Class 객체 (source 포함)             | ~500MB       |
+  | - Class 1,200개 × 평균 소스 크기 ~100KB |              |
+  | Method 객체                        | ~200MB       |
+  | - Method 5,000개 × 각각 소스 포함       |              |
+  | Field 객체                         | ~50MB        |
+  | Bean, Endpoint 등                 | ~100MB       |
+  | 총 메모리 사용량                        | ~850MB       |
+
+  ---
+  현재 구조의 장단점
+
+  ✅ 장점
+
+  1. 단순한 구조: 파싱과 저장이 명확히 분리
+  2. 분석 용이: 메모리에 모든 데이터가 있어 관계 분석 쉬움 (Bean 의존성, 호출 체인 등)
+  3. 오류 처리: 파싱 실패 시 DB에 부분 저장 안 됨
+  4. 중간 데이터: classes_list로 추가 분석 가능
+
+  ❌ 단점
+
+  1. 메모리 부족 위험: 대용량 프로젝트 (1,000+ 클래스)에서 OOM 가능
+  2. 소스 코드 중복 저장:
+    - 메모리: class_obj.source = file_content (전체)
+    - Neo4j: CREATE (c:Class {source: $source}) (또 전체)
+  3. 불필요한 데이터 보유: 파싱 후 더 이상 필요 없는 정보도 메모리에 유지
+  4. 확장성 제한: 수천 개 클래스는 처리 어려움
+
+  ---
+  개선 방안 제안
+
+  옵션 A: 스트리밍 방식 (메모리 효율적)
+
+  def parse_and_save_java_project_streaming(directory, db, project_name):
+      for root, _, files in os.walk(directory):
+          for file in files:
+              if file.endswith(".java"):
+                  # 1. 파일 파싱
+                  class_obj = parse_single_java_file(file)
+
+                  # 2. 즉시 DB 저장
+                  db.add_class(class_obj, ...)
+
+                  # 3. 메모리에서 제거 (가비지 컬렉션)
+                  del class_obj
+
+  장점: 메모리 사용량 일정 유지단점: Bean 의존성, 호출 체인 분석 어려움
+
+  옵션 B: 하이브리드 (현재 + 최적화)
+
+  def parse_java_project_optimized(directory):
+      classes_metadata = []  # 경량 메타데이터만
+
+      for file in java_files:
+          # 소스는 저장하지 않음
+          class_obj = Class(
+              name=class_name,
+              source="",  # 비우기!
+              ...
+          )
+          classes_metadata.append(class_obj)
+
+      return classes_metadata
+
+  장점: 메모리 50% 절감단점: 소스 조회 시 파일 재읽기 필요
+
+  옵션 C: 배치 저장 (성능 개선)
+
+  def save_classes_batch(db, classes, batch_size=100):
+      for i in range(0, len(classes), batch_size):
+          batch = classes[i:i+batch_size]
+
+          # Cypher UNWIND로 배치 저장
+          db.add_classes_batch(batch)
+
+  장점: DB 저장 속도 향상단점: 트랜잭션 롤백 시 전체 배치 실패
+
+  ---
+  추천 방안
+
+  **현재 구조 유지 + 옵션 B (소스 코드 제거)**를 추천합니다:
+
+  # Class 객체 생성 시 소스 제외 옵션 추가
+  class_obj = Class(
+      name=class_name,
+      source="" if save_to_db else file_content,  # DB 저장 시에만 소스 포함
+      ...
+  )
+
+  이렇게 하면:
+  - ✅ 메모리 사용량 50% 절감
+  - ✅ 관계 분석 로직 유지
+  - ✅ 기존 코드 구조 보존
+
+  이 방식으로 개선할까요?
+
+> 옵션 A: 스트리밍 방식 (메모리 효율적)에서 '호출 체인 분석 어려움'을 제시했는데, 현재 메모리에 모두 저장해두고서 호출 체인 분석을 하고 있나? 
+
+● 좋은 지적입니다! 코드를 다시 확인해보겠습니다.
+
+● Read(csa/services/java_analysis/project.py)
+  ⎿  Read 30 lines
+
+● 정확한 지적입니다! 제가 실수했습니다. 코드를 다시 확인해보니:
+
+  실제 호출 체인 정보 처리 방식
+
+  1. 호출 정보는 파싱 시점에 이미 추출되어 저장
+
+  파일: project.py:679-690
+
+  # 각 메서드 파싱 시
+  call = MethodCall(
+      source_package=package_name,
+      source_class=class_name,
+      source_method=declaration.name,
+      target_package=resolved_target_package,
+      target_class=resolved_target_class_name,
+      target_method=invocation.member,
+      call_order=call_order,
+      line_number=line_number,
+  )
+  classes[class_key].calls.append(call)  # Class 객체에 저장!
+
+  2. 725-727줄 분석은 반환되지 않음!
+
+  # project.py:725-727
+  resultmap_mapping_analysis = analyze_mybatis_resultmap_mapping(...)
+  sql_method_relationships = analyze_sql_method_relationships(sql_statements, classes_list)
+  db_call_chain_analysis = generate_db_call_chain_analysis(sql_statements, classes_list)
+
+  # return 문 (735-749줄)에서 이 결과들이 포함되지 않음!
+  return (
+      list(packages.values()),
+      classes_list,  # 이미 호출 정보 포함
+      class_to_package_map,
+      beans,
+      ...
+      # resultmap_mapping_analysis, sql_method_relationships, db_call_chain_analysis 없음!
+  )
+
+  3. 실제 호출 체인 분석은 Neo4j에서 수행
+
+  Neo4j에 저장 시 CALLS 관계가 생성됨:
+  (Method)-[:CALLS]->(Method)
+
+  시퀀스 다이어그램 생성 시 Neo4j에서 조회:
+  MATCH (m1:Method)-[:CALLS]->(m2:Method)
+  WHERE ...
+  RETURN m1, m2
+  ORDER BY call_order
+
+  ---
+  결론: 스트리밍 방식으로 변경 가능!
+
+  def parse_and_save_streaming(directory, db, project_name):
+      """스트리밍 방식: 파일 하나씩 파싱 → 즉시 DB 저장"""
+
+      for java_file in java_files:
+          # 1. 파일 파싱 (호출 정보 포함)
+          class_obj = parse_single_java_file(java_file)
+
+          # class_obj.calls에 이미 MethodCall 객체들이 포함됨!
+
+          # 2. 즉시 DB 저장
+          db.add_class(class_obj, package_name, project_name)
+          # -> Neo4j에 Class 노드 + Method 노드 + CALLS 관계 모두 저장됨
+
+          # 3. 메모리에서 제거
+          del class_obj
+
+      # 호출 체인 분석은 Neo4j Cypher 쿼리로 수행
+      # 메모리에 모든 클래스를 유지할 필요 없음!
+
+  ---
+  제가 틀렸던 이유
+
+  - 725-727줄의 analyze_* 함수들이 호출 체인 분석을 한다고 착각
+  - 하지만 이 결과들은 반환되지도 않고, 사용되지도 않음 (로깅/검증용)
+  - 실제 호출 정보는 파싱 단계에서 Class 객체에 포함되어 Neo4j에 저장됨
+
+  ---
+  정정된 개선 방안
+
+  ✅ 스트리밍 방식 (추천)
+
+  장점:
+  - ✅ 메모리 사용량 일정 유지
+  - ✅ 대용량 프로젝트 처리 가능
+  - ✅ 호출 체인 분석은 Neo4j에서 수행 (문제 없음!)
+
+  단점:
+  - Bean 의존성 분석은 전체 클래스 필요 (별도 처리 필요)
+
+  정확한 지적 감사합니다!
+
+  ---
+  ● Bean 의존성 분석을 스트리밍/메모리 효율적 방식으로 처리하기 위한 방안을 제안하겠습니다.
+
+  먼저 현재 Bean 의존성 분석의 요구사항을 정리하면:
+
+  현재 Bean 의존성 분석 요구사항
+
+  /workspace/csa/services/java_analysis/spring.py의 analyze_bean_dependencies() 함수는:
+  - 전체 Bean 목록으로 class_to_bean 매핑 생성 (Bean 이름 → Bean 객체)
+  - 각 클래스의 필드/생성자/setter에서 타입 정보 추출
+  - 타입을 Bean 이름과 매칭하여 의존성 해결
+
+  제안 방안
+
+  방안 A: 2-Pass 경량 메타데이터 방식
+
+  구조:
+  1. 1st Pass (스트리밍): Java 파일을 하나씩 파싱하면서:
+    - Bean 메타데이터만 수집: {class_name, bean_name, bean_type, package, annotations}
+    - 일반 클래스는 Neo4j에 바로 저장
+    - Bean 메타데이터는 경량 딕셔너리에 보관 (~수백 KB)
+  2. 2nd Pass (메모리 내 처리): Bean 메타데이터로 의존성 해결
+    - Bean 클래스만 다시 파싱하여 필드/생성자 분석
+    - 메타데이터로 의존성 매칭
+    - BeanDependency 관계 생성
+
+  장점:
+  - 전체 소스 코드를 메모리에 두지 않음
+  - Bean은 보통 전체 클래스의 20-30% 정도
+  - 메타데이터는 전체 소스보다 100배 이상 작음
+
+  단점:
+  - Bean 클래스를 두 번 파싱
+  - 구현 복잡도 증가
+
+  메모리 예상:
+  - 1,200개 클래스 중 300개가 Bean이라면
+  - Bean 메타데이터: ~500KB (클래스당 ~1.5KB)
+  - 2nd pass에서 Bean만 파싱: ~200MB (전체의 1/4)
+
+  ---
+  방안 B: Neo4j 기반 점진적 해결 (추천)
+
+  구조:
+  1. 스트리밍 단계: 파일을 하나씩 파싱하면서:
+    - 클래스와 Bean을 Neo4j에 바로 저장
+    - 필드 타입 정보도 함께 저장 (예: @Autowired UserService userService)
+    - 의존성은 "미해결" 상태로 메타데이터만 저장
+  2. 의존성 해결 단계 (모든 Bean 저장 후):
+    - Neo4j Cypher 쿼리로 타입과 Bean 매칭
+  MATCH (bean:Bean)-[:HAS_FIELD]->(field:Field)
+  WHERE field.has_autowired = true
+  MATCH (target:Bean)
+  WHERE target.bean_type = field.field_type
+     OR target.class_name = field.field_type
+  CREATE (bean)-[:DEPENDS_ON {injection_type: 'field'}]->(target)
+
+  장점:
+  - 완전한 스트리밍 - 메모리 사용량 최소화
+  - Neo4j의 그래프 쿼리 능력 활용
+  - 재파싱 불필요
+  - 확장 가능 - 대규모 프로젝트에도 적용 가능
+
+  단점:
+  - Neo4j 쿼리 비용 발생 (하지만 한 번만)
+  - Field 노드 추가 필요 (현재는 Class의 properties로만 저장)
+
+  메모리 예상:
+  - 스트리밍: 한 번에 1개 파일만 (~1MB)
+  - 총 메모리: ~10-20MB (파서 오버헤드 포함)
+
+  ---
+  방안 C: 하이브리드 - 경량 Bean 레지스트리
+
+  구조:
+  1. 1st Pass (스트리밍 + 레지스트리): 파일을 하나씩 파싱하면서:
+    - 일반 클래스: Neo4j에 바로 저장하고 메모리에서 제거
+    - Bean 클래스: Neo4j 저장 + 경량 레지스트리에 보관
+    - 레지스트리: {bean_name: {class_name, type, fields_needing_injection}}
+  2. 의존성 해결 (스트리밍 중 or 완료 후):
+    - 레지스트리에서 의존성 매칭
+    - BeanDependency 생성하여 Neo4j에 저장
+
+  장점:
+  - Bean 정보만 메모리 유지 (전체의 20-30%)
+  - 재파싱 불필요
+  - Neo4j 추가 쿼리 불필요
+
+  단점:
+  - 여전히 Bean 정보를 메모리에 유지
+  - 대규모 프로젝트에서는 제한적
+
+  메모리 예상:
+  - 300개 Bean: ~100-200MB (필드 정보 포함)
+  - 전체 850MB → 200MB로 감소
+
+  ---
+  방안 비교표
+
+  | 구분       | 방안 A (2-Pass)     | 방안 B (Neo4j 기반) | 방안 C (하이브리드) |
+  |----------|-------------------|-----------------|--------------|
+  | 메모리 사용   | ~200MB (2nd pass) | ~10-20MB        | ~200MB       |
+  | 구현 복잡도   | 중간                | 중간              | 낮음           |
+  | 재파싱      | Bean만 재파싱         | 불필요             | 불필요          |
+  | 확장성      | 좋음                | 매우 좋음           | 보통           |
+  | Neo4j 쿼리 | 최소                | 추가 쿼리 필요        | 최소           |
+  | 추가 개발    | 2-pass 로직         | Field 노드 추가     | Bean 레지스트리   |
+
+  권장 방안: 방안 B (Neo4j 기반 점진적 해결)
+
+  이유:
+  1. 완전한 스트리밍: 메모리 사용량을 850MB → 10-20MB로 극적 감소
+  2. 확장 가능: 수만 개 클래스 프로젝트도 처리 가능
+  3. Neo4j 활용: 이미 그래프 DB를 사용하고 있으므로 자연스러운 접근
+  4. 유지보수성: Field를 노드로 저장하면 향후 필드 레벨 분석도 가능
+
+  현재 코드에서 변경이 필요한 부분을 검토할까요, 아니면 다른 방안을 더 검토해볼까요?
