AI 분석 결과 오류발생시 처리로직 추가(2025-10-25 13:25)

--- a/docs/AI분석결과-추가(20251025).md
+++ b/docs/AI분석결과-추가(20251025).md
@@ -197,6 +197,17 @@ MATCH (s:SqlStatement {id: 'selectActiveUsers'})
 RETURN s.id, s.ai_description
 ```
 
+## 오류 처리 정책
+
+AI 분석은 다음과 같은 상황에서 **빈 문자열(`""`)**을 반환하여 전체 분석 프로세스에 영향을 주지 않습니다:
+
+1. **AI가 비활성화된 경우** (`AI_USE_ANALYSIS=false`)
+2. **AI Provider 초기화 실패** (API 키 오류, 네트워크 오류 등)
+3. **LLM 호출 중 예외 발생** (Rate limit, 모델 오류 등)
+4. **응답 정제 실패** (빈 응답, 잘못된 형식 등)
+
+이러한 경우 경고 로그만 출력되고, Neo4j에는 `ai_description=""` (빈 문자열)로 저장되어 데이터 무결성을 유지합니다.
+
 ## 문제 해결
 
 ### Q1: AI 분석이 실행되지 않습니다.
@@ -205,17 +216,24 @@ RETURN s.id, s.ai_description
 - `AI_PROVIDER` 설정 (google, groq, lmstudio, openai)
 - 해당 Provider의 API Key 설정
 
-### Q2: "ImportError: No module named 'google.adk'" 오류가 발생합니다.
+### Q2: "ImportError: No module named 'google-genai'" 오류가 발생합니다.
 **A**: Google Gemini 사용 시 필요한 패키지를 설치하세요:
 ```bash
-pip install google-adk
+pip install google-genai
 ```
 
 ### Q3: AI 분석이 너무 느립니다.
 **A**: 다음 방법을 시도하세요:
-- 더 빠른 LLM 모델 사용 (예: gemini-1.5-flash)
+- 더 빠른 LLM 모델 사용 (예: gemini-2.0-flash, qwen3-32b)
 - `AI_USE_ANALYSIS=false`로 설정하여 AI 분석 비활성화
 - 특정 파일만 분석 (`--class-name` 옵션 사용)
+
+### Q4: AI 분석 결과가 빈 문자열로 저장됩니다.
+**A**: 로그 파일(`logs/`)을 확인하여 다음을 체크하세요:
+- API 키가 유효한지 확인
+- Rate limit 초과 여부 확인
+- 네트워크 연결 상태 확인
+- Provider별 서비스 상태 확인 (Google, Groq 등)
 
 ## 테스트 결과
 
@@ -275,6 +293,10 @@ pip install google-adk
 - [x] 환경변수 설정 (.env, env.example)
 - [x] 테스트 코드 작성 및 검증
 - [x] Windows 콘솔 UTF-8 인코딩 문제 해결
+- [x] LLM 응답 정제 로직 (`_clean_response` 메서드)
+  - [x] `<think>...</think>` 태그 제거
+  - [x] ```markdown ... ``` 코드 블록 추출
+- [x] 오류 처리 개선 (모든 오류/None → 빈 문자열 반환)
 
 ## 작업 완료 일자
 - 2025-10-25: 전체 기능 구현 및 테스트 완료
