AI 분석 방식  성능 개선(2025-10-25 23:50)

--- a/docs/AI분석결과-추가(20251025).md
+++ b/docs/AI분석결과-추가(20251025).md
@@ -302,3 +302,303 @@ pip install google-genai
 - 2025-10-25: 전체 기능 구현 및 테스트 완료
 - 2025-10-25: Google Gemini (google-genai 라이브러리) 정상 작동 확인
 - 2025-10-25: Groq, LM Studio 정상 작동 확인
+
+---
+
+## Phase 7: AI 분석 2-Phase 아키텍처 구현 (성능 최적화) ✅
+
+### 7.1 배경 및 목표
+
+**문제점:**
+- LLM API 호출이 파싱 속도를 크게 저하시킴
+- Rate Limit (429 에러) 발생 시 전체 프로세스 중단
+- 더 나은 LLM 모델 사용 시 성능 영향 큼
+
+**해결 방안:**
+- **Phase 1**: 빠른 파싱 (AI 분석 건너뛰기)
+- **Phase 2**: 선택적 AI Enrichment (배치 처리)
+
+### 7.2 구현 내용
+
+#### 7.2.1 Phase 1: --skip-ai 옵션 추가
+
+**파일 변경:**
+- `csa/cli/commands/analyze.py`: --skip-ai 옵션 추가
+- `csa/services/analysis/handlers.py`: skip_ai 파라미터 지원
+- `csa/services/java_analysis/project.py`:
+  - Class AI 분석에 SKIP_AI_ANALYSIS 환경변수 체크 (321-329번 라인)
+  - Method AI 분석에 SKIP_AI_ANALYSIS 환경변수 체크 (458-470번 라인)
+- `csa/services/java_analysis/mybatis.py`: SQL AI 분석에 SKIP_AI_ANALYSIS 환경변수 체크 (55-67번 라인)
+
+**사용 방법:**
+```bash
+# 명령어 옵션으로 AI 분석 건너뛰기
+python -m csa.cli.main analyze --all-objects --clean --skip-ai --project-name myproject
+
+# 또는 환경변수로 설정
+SKIP_AI_ANALYSIS=true python -m csa.cli.main analyze --all-objects --clean --project-name myproject
+```
+
+#### 7.2.2 Phase 2: ai-enrich 명령어 구현
+
+**새로 생성된 파일:**
+- `csa/cli/commands/ai_enrich.py`: AI Enrichment CLI 명령어
+- `csa/services/ai_enrichment_service.py`: AI Enrichment 서비스
+
+**수정된 파일:**
+- `csa/cli/main.py`: ai-enrich 명령어 등록
+- `csa/services/graph_db/base.py`: driver와 database property 추가
+
+**주요 기능:**
+1. Neo4j에서 ai_description이 없는 노드 조회
+2. 배치 단위로 AI 분석 수행
+3. 실시간 진행률 표시
+4. 노드 타입별 선택적 처리 (class, method, sql)
+
+**사용 방법:**
+```bash
+# 모든 노드 타입에 AI 설명 추가
+python -m csa.cli.main ai-enrich --project-name myproject
+
+# Class 노드만 AI enrichment
+python -m csa.cli.main ai-enrich --project-name myproject --node-type class
+
+# Method 노드만 AI enrichment
+python -m csa.cli.main ai-enrich --project-name myproject --node-type method
+
+# SQL 노드만 AI enrichment
+python -m csa.cli.main ai-enrich --project-name myproject --node-type sql
+
+# 동시 요청 수 조절 (비동기 병렬 처리, 성능 향상)
+python -m csa.cli.main ai-enrich --project-name myproject --concurrent 20
+
+# 최대 처리 노드 수 제한 (테스트용)
+python -m csa.cli.main ai-enrich --project-name myproject --limit 10
+
+# 로컬 LLM (LM Studio) 사용 시 권장 설정
+python -m csa.cli.main ai-enrich --project-name myproject --concurrent 15
+```
+
+#### 7.2.3 비동기 병렬 처리 개선 (2025-10-25)
+
+**배경:**
+- 기존 순차 처리 방식: 100개 Class × 3초 = 300초 (5분)
+- 개선 필요: LLM 호출 대기 시간이 전체 처리 시간의 대부분 차지
+
+**구현 내용:**
+
+**1. AIAnalyzer 비동기 메서드 추가** (`csa/aiwork/ai_analyzer.py`)
+```python
+async def _call_llm_async(self, input_text: str, ...) -> str:
+    """LLM을 비동기로 호출 (run_in_executor 사용)"""
+    loop = asyncio.get_event_loop()
+    return await loop.run_in_executor(None, lambda: self._call_llm(...))
+
+async def analyze_class_async(self, source_code: str, class_name: str = "") -> str:
+    """Java Class 소스 코드를 비동기로 분석"""
+
+async def analyze_method_async(self, source_code: str, ...) -> str:
+    """Java Method 소스 코드를 비동기로 분석"""
+
+async def analyze_sql_async(self, sql_statement: str, sql_id: str = "") -> str:
+    """SQL 문을 비동기로 분석"""
+```
+
+**2. AIEnrichmentService 비동기 변환** (`csa/services/ai_enrichment_service.py`)
+- `enrich_project_async()`: 메인 비동기 메서드
+- `_enrich_classes_async()`: asyncio.Semaphore로 동시 요청 수 제한
+- `_enrich_methods_async()`: asyncio.gather()로 병렬 실행
+- `_enrich_sql_statements_async()`: 비동기 병렬 처리
+- 기존 `enrich_project()`: 하위 호환성을 위해 asyncio.run()으로 async 버전 호출
+
+**3. CLI 명령어 옵션 업데이트** (`csa/cli/commands/ai_enrich.py`)
+- `--concurrent` 옵션 추가 (동시 AI 요청 수)
+- `--batch-size` 옵션 deprecated (하위 호환성 유지)
+- 기본값: 환경변수 `CONCURRENT_AI_REQUESTS` 또는 10
+
+**성능 개선:**
+- 순차 처리: 100개 × 3초 = 300초
+- 병렬 처리 (15 concurrent): 100개 ÷ 15 × 3초 ≈ 20-30초
+- **약 10-15배 속도 향상** ⚡
+
+**사용 예시:**
+```bash
+# 로컬 LLM (LM Studio): 15-20 concurrent 권장
+python -m csa.cli.main ai-enrich --project-name myproject --concurrent 15
+
+# 클라우드 API (Google, OpenAI): 5-10 concurrent 권장
+python -m csa.cli.main ai-enrich --project-name myproject --concurrent 8
+
+# Rate Limit 발생 시 동시 요청 수 줄이기
+python -m csa.cli.main ai-enrich --project-name myproject --concurrent 5
+```
+
+### 7.3 환경변수 추가
+
+**.env 파일에 추가:**
+```bash
+# AI Enrichment 동시 요청 수 (기본값: 10)
+# ai-enrich 명령어에서 동시에 처리할 노드 수
+# 로컬 LLM (LM Studio): 10-20 권장
+# 클라우드 API (Google, OpenAI): 5-10 권장
+# Rate Limit 발생 시 이 값을 줄여서 재시도
+CONCURRENT_AI_REQUESTS=10
+
+# AI Enrichment 배치 크기 (deprecated: 하위 호환성을 위해 유지)
+# 대신 CONCURRENT_AI_REQUESTS 사용을 권장합니다
+AI_ENRICHMENT_BATCH_SIZE=50
+```
+
+**env.example 업데이트 완료** ✅
+
+### 7.4 2-Phase 워크플로우
+
+```
+┌─────────────────────────────────────────────────────────────┐
+│ Phase 1: 빠른 파싱 (--skip-ai)                               │
+├─────────────────────────────────────────────────────────────┤
+│ analyze 명령어 → SKIP_AI_ANALYSIS=true                       │
+│       ↓                                                      │
+│ Java/DB 파싱 (LLM 호출 없음)                                 │
+│       ↓                                                      │
+│ Neo4j 저장 (ai_description = "")                             │
+│       ↓                                                      │
+│ 파싱 완료 (빠른 속도) ⚡                                      │
+└─────────────────────────────────────────────────────────────┘
+
+┌─────────────────────────────────────────────────────────────┐
+│ Phase 2: AI Enrichment (선택적 실행)                         │
+├─────────────────────────────────────────────────────────────┤
+│ ai-enrich 명령어                                             │
+│       ↓                                                      │
+│ Neo4j에서 ai_description 없는 노드 조회                      │
+│       ↓                                                      │
+│ 비동기 병렬 처리 (진행률 표시, 10-15x 속도 향상) ⚡          │
+│   ├─→ Class AI 분석 → ai_description 업데이트               │
+│   ├─→ Method AI 분석 → ai_description 업데이트              │
+│   └─→ SQL AI 분석 → ai_description 업데이트                 │
+│       ↓                                                      │
+│ Neo4j 업데이트 완료 ✅                                       │
+└─────────────────────────────────────────────────────────────┘
+```
+
+### 7.5 성능 개선 효과
+
+| 항목 | Phase 1 (--skip-ai) | Phase 2 (ai-enrich) |
+|-----|---------------------|---------------------|
+| **파싱 속도** | ⚡ 매우 빠름 (LLM 호출 없음) | ⚡ 빠름 (비동기 병렬 처리) |
+| **전체 분석 시간** | 수 분 이내 | **10-15배 향상** (예: 300초 → 20초) |
+| **Rate Limit 영향** | ❌ 없음 | ⚠️ 있음 (동시 요청 수 조절 가능) |
+| **유연성** | 단순 파싱만 | 노드 타입별/개수별 선택 가능 |
+| **재실행** | 전체 재파싱 필요 | AI만 다시 실행 가능 |
+
+### 7.6 사용 시나리오
+
+#### 시나리오 1: 초기 프로젝트 분석
+```bash
+# 1단계: 빠르게 구조 파악
+python -m csa.cli.main analyze --all-objects --clean --skip-ai --project-name myproject
+
+# 2단계: 필요한 부분만 AI 분석 (병렬 처리로 빠르게)
+python -m csa.cli.main ai-enrich --project-name myproject --node-type class --concurrent 15 --limit 50
+```
+
+#### 시나리오 2: Rate Limit 발생 시
+```bash
+# 1단계: 동시 요청 수 줄이기
+python -m csa.cli.main ai-enrich --project-name myproject --concurrent 5 --limit 100
+
+# 2단계: 나머지 처리 (이미 처리된 것은 건너뜀)
+python -m csa.cli.main ai-enrich --project-name myproject --concurrent 5
+```
+
+#### 시나리오 3: 더 나은 모델로 재분석
+```bash
+# 1단계: .env에서 AI_PROVIDER 변경 (google → groq)
+# 2단계: 기존 ai_description 삭제 (Neo4j)
+MATCH (n) WHERE n.ai_description IS NOT NULL SET n.ai_description = ""
+
+# 3단계: 새 모델로 재분석
+python -m csa.cli.main ai-enrich --project-name myproject
+```
+
+### 7.7 Neo4j 쿼리 예시
+
+```cypher
+-- ai_description이 비어있는 Class 노드 확인
+MATCH (c:Class {project_name: 'myproject'})
+WHERE c.ai_description IS NULL OR c.ai_description = ''
+RETURN c.name, c.ai_description
+LIMIT 10
+
+-- AI enrichment 된 Class 노드 확인
+MATCH (c:Class {project_name: 'myproject'})
+WHERE c.ai_description IS NOT NULL AND c.ai_description <> ''
+RETURN c.name, c.ai_description
+LIMIT 10
+
+-- 프로젝트별 AI 분석 통계
+MATCH (c:Class {project_name: 'myproject'})
+WITH
+  count(c) as total_classes,
+  count(CASE WHEN c.ai_description IS NOT NULL AND c.ai_description <> '' THEN 1 END) as enriched_classes
+RETURN
+  total_classes,
+  enriched_classes,
+  total_classes - enriched_classes as pending_classes,
+  round(100.0 * enriched_classes / total_classes, 2) as completion_percentage
+```
+
+### 7.8 주요 파일 변경 사항 (Phase 7)
+
+| 파일 | 변경 내용 | 상태 |
+|------|----------|------|
+| `csa/cli/commands/analyze.py` | --skip-ai 옵션 추가 | ✅ |
+| `csa/services/analysis/handlers.py` | skip_ai 파라미터 지원 | ✅ |
+| `csa/services/java_analysis/project.py` | SKIP_AI_ANALYSIS 체크 (Class, Method) | ✅ |
+| `csa/services/java_analysis/mybatis.py` | SKIP_AI_ANALYSIS 체크 (SQL) | ✅ |
+| `csa/cli/commands/ai_enrich.py` | AI enrichment 명령어 신규 생성 | ✅ |
+| `csa/services/ai_enrichment_service.py` | AI enrichment 서비스 신규 생성 | ✅ |
+| `csa/cli/main.py` | ai-enrich 명령어 등록 | ✅ |
+| `csa/services/graph_db/base.py` | driver, database property 추가 | ✅ |
+| `.env` | AI_ENRICHMENT_BATCH_SIZE 추가 | ✅ |
+| `env.example` | AI_ENRICHMENT_BATCH_SIZE 예시 추가 | ✅ |
+| `CLAUDE.md` | 2-Phase 아키텍처 문서화 | ✅ |
+| `csa/aiwork/ai_analyzer.py` | 비동기 메서드 추가 (analyze_*_async) | ✅ |
+| `csa/services/ai_enrichment_service.py` | 비동기 병렬 처리 변환 | ✅ |
+| `csa/cli/commands/ai_enrich.py` | --concurrent 옵션 추가 | ✅ |
+| `.env` | CONCURRENT_AI_REQUESTS 추가 | ✅ |
+| `env.example` | CONCURRENT_AI_REQUESTS 예시 추가 | ✅ |
+| `CLAUDE.md` | 비동기 병렬 처리 문서화 | ✅ |
+
+### 7.9 추가 구현 항목 체크리스트
+
+- [x] analyze 명령어에 --skip-ai 옵션 추가
+- [x] SKIP_AI_ANALYSIS 환경변수 체크 로직 (Class, Method, SQL)
+- [x] ai-enrich CLI 명령어 구현
+- [x] AIEnrichmentService 서비스 구현
+  - [x] Class 노드 배치 처리
+  - [x] Method 노드 배치 처리
+  - [x] SqlStatement 노드 배치 처리
+  - [x] 진행률 표시
+  - [x] 통계 출력
+- [x] GraphDBBase에 driver, database property 추가
+- [x] 환경변수 추가 (AI_ENRICHMENT_BATCH_SIZE)
+- [x] env.example 업데이트
+- [x] CLAUDE.md 문서화
+- [x] Rate Limit 에러 처리 개선 (기존 Phase 6에서 완료)
+- [x] 비동기 병렬 처리 구현 (2025-10-25 추가)
+  - [x] AIAnalyzer 비동기 메서드 추가
+  - [x] AIEnrichmentService 비동기 변환
+  - [x] CLI --concurrent 옵션 추가
+  - [x] CONCURRENT_AI_REQUESTS 환경변수 추가
+  - [x] 성능 최적화 (10-15배 속도 향상)
+
+### 7.10 작업 완료 일자 (Phase 7)
+- 2025-10-25: 2-Phase 아키텍처 설계 완료
+- 2025-10-25: --skip-ai 옵션 구현 완료
+- 2025-10-25: ai-enrich 명령어 구현 완료
+- 2025-10-25: AIEnrichmentService 서비스 구현 완료
+- 2025-10-25: GraphDBBase property 추가 완료
+- 2025-10-25: 비동기 병렬 처리 구현 완료 ⚡
+- 2025-10-25: 문서화 완료
